# simple_orchestrator_demo

./: .env.example  .gitignore  CLAUDE.md  CONTINUE_REBUILD.sh  LICENSE  README.md  REBUILD.md  pyproject.toml
config/: default.yaml  hooks.yaml  schema.json
docs/development/: PHASE_5B_BUG_FIXES.md  PHASE_6A++_SUMMARY.md  README.md  architecture.md  configuration.md  git-workflow.md  implementation-status.md  known-limitations.md  manual-testing-guide.md  patterns.md  testing.md  troubleshooting.md
src/orchestrator/: __init__.py  cli.py  display.py  display_activity.py  display_live.py  display_stream.py
src/orchestrator/cache/: __init__.py  manager.py  models.py
src/orchestrator/cli/: __init__.py  mascot.py  seal_facts.py  welcome.py
src/orchestrator/core/: __init__.py  interrupt.py  orchestrator.py
src/orchestrator/hooks/: __init__.py  base.py  engine.py
src/orchestrator/hooks/builtin/: __init__.py  cache.py  display.py  hitl.py  logging.py  metrics.py
src/orchestrator/llm/: __init__.py  client.py
src/orchestrator/modes/: __init__.py  manager.py  models.py
src/orchestrator/skills/: __init__.py  models.py  registry.py
src/orchestrator/skills/builtin/code_edit/: SKILL.md
src/orchestrator/skills/builtin/code_review/: SKILL.md
src/orchestrator/skills/builtin/file_management/: SKILL.md
src/orchestrator/skills/builtin/git_operations/: SKILL.md
src/orchestrator/skills/builtin/research/: SKILL.md
src/orchestrator/subagents/: __init__.py  manager.py  models.py
src/orchestrator/tasks/: __init__.py  manager.py  models.py
src/orchestrator/tools/: __init__.py  base.py  registry.py
src/orchestrator/tools/builtin/: __init__.py  bash.py  file_ops.py  subagent_spawn.py  task_decompose.py  todo.py  web_fetch.py
src/orchestrator/workspace/: __init__.py  lifecycle.py  session.py  state.py  summarizer.py
tests/integration/: test_web_fetch_integration.py  test_workspace_integration.py
tests/unit/: test_bash_tool.py  test_display_activity.py  test_hitl_whitelist.py  test_interrupt.py  test_llm_azure.py  test_mascot.py  test_mode_manager.py  test_seal_facts.py  test_web_fetch.py  test_welcome.py  test_workspace.py
